# LetterRecogniser-MLP

./: .gitignore  README.md  README_RUS.md  RESEARCH.md
materials/: instructions_for_testing.md  instructions_for_testing_rus.md  topics-list.md  topics-list_RUS.md
src/: 9model-64-71.txt  CMakeLists.txt  Makefile  MatrixModel.cpp  MatrixModel.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h  README.md  ReadMe.html  Read_me.html  m.cpp  model-47-51.txt  model-v2-75.txt
src/LetterRecogniser/: CMakeLists.txt  drawablewidget.cpp  drawablewidget.h  letterrecogniserwindow.cpp  letterrecogniserwindow.h  letterrecogniserwindow.ui  main.cpp  resultgraphwidget.cpp  resultgraphwidget.h
src/controller/: CMakeLists.txt  controller.cpp  controller.h
src/core/: CMakeLists.txt  MLPModel.h  MLPSerializer.h  MLPTestMetrics.h  MLPTrainStages.h  MLPTrainer.h  ModelBuilder.cpp  ModelBuilder.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h
src/core/graph/: CMakeLists.txt  GraphLayer.cpp  GraphLayer.h  GraphModel.cpp  GraphModel.h  GraphNode.h
src/core/matrix/: CMakeLists.txt  MatrixLayer.cpp  MatrixLayer.h  MatrixModel.cpp  MatrixModel.h
src/core/matrix/libmatrix/: matrix.cc  matrix.h
src/core/serializer/: CMakeLists.txt  FileMLPSerializer.cpp  FileMLPSerializer.h
src/core/training/: CMakeLists.txt  EmnistData.cpp  EmnistData.h  EmnistDatasetReader.cpp  EmnistDatasetReader.h  EmnistMLPTrainer.cpp  EmnistMLPTrainer.h  TFMetrics.h
src/gui/: CMakeLists.txt  drawablewidget.cpp  drawablewidget.h  letterrecogniserwindow.cpp  letterrecogniserwindow.h  main.cpp  resultgraphwidget.cpp  resultgraphwidget.h
src/gui/resources/: icon.icns
src/research/: CMakeLists.txt  main_research.cpp
src/tests/: CMakeLists.txt  EmnistDatasetReaderTests.cpp  EmnistMLPTrainerTests.cpp  FileMLPSerializerTests.cpp  GraphModelTests.cpp  MatrixModelTests.cpp  ModelBuilderTests.cpp  MultilayerPerceptronTests.cpp
src/tests/assets/: emnist-sample-broken.txt  emnist-sample.txt  model-test-broken.txt  model-test.txt
src/weights/: 2-model-77.txt  3-model-67.txt  3-model-70.txt  5-model-72.txt  5-model-78.txt
weights/: 4-model-70.txt
